<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.tomek.notepad.NoteActivity">

    <item
        android:id="@+id/action_voice_input"
        android:icon="@drawable/ic_keyboard_voice_24dp"
        android:title="@string/action_voice"
        android:onClick="speakButtonClicked"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/action_toggle_keyboard"
        android:icon="@drawable/ic_keyboard_24px"
        android:title="@string/action_toggle_keyboard"
        android:onClick="toggleKeyboard"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/action_text_format"
        android:icon="@drawable/ic_text_format_24px"
        android:title="@string/action_text_format"
        android:onClick="toggleMenu"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/action_done"
        android:icon="@drawable/ic_done_24dp"
        android:title="@string/action_done"
        android:onClick="saveOrUpdateNote"
        app:showAsAction="ifRoom"/>

</menu>
