<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/drawPanelSlider"
    android:layout_width="match_parent"
    android:layout_height="200dp"
    android:layout_alignParentBottom="true"
    android:background="@color/colorAccent"
    android:orientation="vertical"
    android:visibility="gone">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center_horizontal" >

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/draw_options"
            android:layout_marginTop="6dp"
            android:layout_gravity="center_horizontal"
            android:textSize="20sp"
            android:textStyle="bold" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:gravity="center_horizontal" >

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_delete_24px"
                android:layout_marginStart="10dp"
                android:onClick="wipeCanvas"
                android:tint="@color/textFormatBlack" />

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_draw_24dp"
                android:layout_marginStart="10dp"
                android:tag="paint"
                android:onClick="eraseOrPaintMode"
                android:tint="@color/textFormatBlack" />

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_erase_24px"
                android:layout_marginStart="10dp"
                android:tag="erase"
                android:onClick="eraseOrPaintMode"
                android:tint="@color/textFormatBlack" />

            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/brush_color"
                android:layout_marginTop="6dp"
                android:layout_gravity="center_horizontal"
                android:textSize="20sp"
                android:textStyle="bold" />

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:gravity="center_horizontal" >

                <ImageButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_brush_color_24dp"
                    android:layout_marginStart="10dp"
                    android:onClick="changeColor"
                    android:tag="black"
                    android:tint="@color/textFormatBlack" />

                <ImageButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_brush_color_24dp"
                    android:layout_marginStart="10dp"
                    android:onClick="changeColor"
                    android:tag="red"
                    android:tint="@color/textFormatRed" />

                <ImageButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_brush_color_24dp"
                    android:layout_marginStart="10dp"
                    android:onClick="changeColor"
                    android:tag="blue"
                    android:tint="@color/textFormatBlue" />

                <ImageButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_brush_color_24dp"
                    android:layout_marginStart="10dp"
                    android:onClick="changeColor"
                    android:tag="green"
                    android:tint="@color/textFormatGreen" />

                <ImageButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_brush_color_24dp"
                    android:layout_marginStart="10dp"
                    android:onClick="changeColor"
                    android:tag="yellow"
                    android:tint="@color/textFormatYellow" />

            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/brush_size"
                android:layout_marginTop="6dp"
                android:layout_gravity="center_horizontal"
                android:textSize="20sp"
                android:textStyle="bold" />

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:gravity="center_horizontal" >

                <ImageButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_brush_small_24px"
                    android:layout_marginStart="10dp"
                    android:tag="small"
                    android:onClick="changeBrushSize"
                    android:tint="@color/textFormatBlack" />

                <ImageButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_brush_medium_24px"
                    android:layout_marginStart="10dp"
                    android:tag="medium"
                    android:onClick="changeBrushSize"
                    android:tint="@color/textFormatBlack" />

                <ImageButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_brush_big_24px"
                    android:layout_marginStart="10dp"
                    android:tag="large"
                    android:onClick="changeBrushSize"
                    android:tint="@color/textFormatBlack" />

                </LinearLayout>
            </LinearLayout>
    </ScrollView>
</LinearLayout>